<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_back_2_gather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dip"
            android:background="@drawable/button_press"
            android:text="@string/back" />

        <TextView
            android:id="@+id/title_map_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dip"
            android:gravity="center"
            android:paddingTop="12dip"
            android:text="@string/title_param_setting" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@id/layout_title_setting"
        android:layout_marginTop="5dip"
        android:background="@drawable/u4_line" />

    <RelativeLayout
        android:id="@+id/layout_user_prefer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dip"
            android:text="@string/gather_button" />
    </RelativeLayout>

</RelativeLayout>