<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc">
    
	<TextView 
	    android:id = "@+id/head"
	    android:layout_alignParentTop="true"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"
	    android:paddingBottom="10dip"
	    android:text="RTMAP 地图采集系统"
	    android:textSize="22sp"
	    android:gravity="center"
	    android:textColor="#FFFFFF"
	    android:background="#333333"/>

    
     <!-- <com.rtmap.wifipicker.util.ClearEditText
        android:id="@+id/username"
        android:layout_marginTop="60dp"
        android:layout_below="@id/head"
        android:layout_width="fill_parent"
        android:background="@drawable/login_edittext_bg" 
        android:drawableLeft="@drawable/icon_user"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:singleLine="true"
        android:drawableRight="@drawable/delete_selector"
        android:hint="@string/title_username"
        android:layout_height="wrap_content" >

     </com.rtmap.wifipicker.util.ClearEditText>
    
     <com.rtmap.wifipicker.util.ClearEditText
        android:id="@+id/password"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:drawableLeft="@drawable/account_icon"
        android:hint="@string/title_password"
        android:singleLine="true"
        android:password="true"
        android:drawableRight="@drawable/delete_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:background="@drawable/login_edittext_bg" >
    </com.rtmap.wifipicker.util.ClearEditText> -->
    
    <com.rtmap.wifipicker.util.ClearEditText
        android:id="@+id/username"
        android:layout_marginTop="60dp"
        android:layout_below="@id/head"
        android:layout_width="fill_parent"
        android:drawableLeft="@drawable/icon_user"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:singleLine="true"
        android:background="@drawable/login_edittext_user_bg"
        android:drawableRight="@drawable/delete_selector"
        android:hint="@string/title_username"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:paddingTop="15dip"
        android:paddingBottom="15dip"
        android:paddingLeft="15dip" >

    </com.rtmap.wifipicker.util.ClearEditText>
    

    <com.rtmap.wifipicker.util.ClearEditText
        android:id="@+id/password"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:drawableLeft="@drawable/icon_password"
        android:hint="@string/title_password"
        android:singleLine="true"
        android:password="true"
        android:drawableRight="@drawable/delete_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:background="@drawable/login_edittext_bg"
        android:textSize="22sp"
        android:paddingTop="15dip"
        android:paddingBottom="15dip"
        android:paddingLeft="15dip" >
    </com.rtmap.wifipicker.util.ClearEditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/login_button_bg"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        android:text="@string/title_login" />
    <TextView
        android:id="@+id/version_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        
        android:textColor="#000000"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="版本号："
        android:textColor="@color/blue"
        android:textSize="26sp" />

</RelativeLayout>